kubernetes/apps/utilities/trilium/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trilium
  namespace: utilities
spec:
  type: ClusterIP
  ports:
    - port: 10020
      targetPort: 8080
  selector:
    app: trilium
