kubernetes/apps/utilities/trilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: utilities
  name: trilium
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.rutberg.dev"
spec:
  ingressClassName: external
  rules:
    - host: trilium.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trilium
                port:
                  number: 10010
